[tool.poetry]
name = "hass-365gps"
version = "0.0.0"
description = ""
authors = ["BananaLoaf <bananaloaf@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
aiohttp = "^3.11.11"
homeassistant = "^2025.2.4"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
