[project]
name = "hass-365gps"
dynamic = ["version"]
authors = [
  { name="BananaLoaf", email="bananaloaf@protonmail.com" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.13,<3.14"
dependencies = [
    "homeassistant>=2025.2.4",
]

[dependency-groups]
dev = [
    "poethepoet>=0.37.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.7",
]




[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "regex"
path = "custom_components/365gps/manifest.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.build]
include = ["custom_components/365gps"]




[project.scripts]

[project.gui-scripts]

[tool.poe.tasks]
lint-format = "ruff format custom_components/365gps tests/"
lint-check = "ruff check --fix custom_components/365gps tests/"
lint = ["lint-format", "lint-check"]

